<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kindling</string>
    <string name="action_settings">Settings</string>
    <string name="game">Games</string>
    <string name="messages">Messages</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_messages">MainMessagesActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="chat_hint">Touch here to chat</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="interested_in">Interested In</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="invalid_input">Please fill out the form fully.</string>
    <string name="title_activity_matching">MatchingActivity</string>
    <string name="title_activity_wordgame">WordGameActivity</string>
    <string name="title_activity_mathgame">MathGameActivity</string>
    <string name="server_IP">198.199.92.13</string>
    <string name="auth_fail">Username or password was incorrect</string>
    <string name="sign_up_fail">Username already taken.</string>
    <string name="send_button">Send</string>

</resources>
