<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="kindling.com.helloworld.SignupActivity"
    android:theme="@android:style/Theme.Light.WallpaperSettings"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/enrollTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/signup_title"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:background="#fef7ec"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="#fef7ec"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:background="#fef7ec"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"/>

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"
        android:background="#fef7ec"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"/>

    <EditText
        android:id="@+id/age_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        android:background="#fef7ec"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kindling.com.helloworld.SignupActivity"
        android:theme="@android:style/Theme.NoTitleBar"
        android:orientation="horizontal">

        <TextView android:id="@+id/interested_in_text_view"
            android:textSize="@dimen/main_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/small_margin"
            android:text="@string/interested_in" />

        <ImageButton
            android:id="@+id/interested_in_male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/male_checkbox" />

        <ImageButton
            android:id="@+id/interested_in_female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/women_btn" />

        <ImageButton
            android:id="@+id/interested_in_both_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/bisexual_btn" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kindling.com.helloworld.SignupActivity"
        android:theme="@android:style/Theme.NoTitleBar"
        android:orientation="horizontal">

        <TextView android:id="@+id/gender_text_view"
            android:textSize="@dimen/main_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/small_margin"
            android:text="@string/gender" />

        <ImageButton
            android:id="@+id/sex_male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/male_btn" />

        <ImageButton
            android:id="@+id/sex_female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/women_btn" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/actualSignupButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/actual_signup_btn" />

</LinearLayout>
